--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -40,6 +40,7 @@
 		"ms-python.vscode-pylance",
 		"ms-python.python",
 		"tht13.python",
+		"analytic-signal.preview-mp4",
 	],
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [
